chore: get rid of '@typescript-eslint/no-unused-vars': 'off', and enforce it everywhere

--- a/packages/connect-explorer/src/pages/index.mdx
+++ b/packages/connect-explorer/src/pages/index.mdx
@@ -8,13 +8,7 @@ import styled from 'styled-components';
 import Link from 'next/link';
 
 import { spacings, spacingsPx } from '@trezor/theme';
-import {
-    Button,
-    Card as TrezorCard,
-    CollapsibleBox,
-    variables,
-    Paragraph,
-} from '@trezor/components';
+import { Button, Card as TrezorCard, CollapsibleBox, variables } from '@trezor/components';
 
 import IconNode from '../components/icons/IconNode';
 import IconWeb from '../components/icons/IconWeb';
