chore(suite): refactor staking

--- a/packages/suite-data/files/translations/cs.json
+++ b/packages/suite-data/files/translations/cs.json
@@ -1773,7 +1773,7 @@
   "TR_STAKE_STAKING_PROCESS": "Proces stakingu",
   "TR_STAKE_START_STAKING": "Začněte stakovat",
   "TR_STAKE_TIME_TO_CLAIM": "Čas na výběr",
-  "TR_STAKE_TOTAL_PENDING": "Celková výše staku čekající na vyřízení:",
+  "TR_STAKE_TOTAL_PENDING": "Celková výše staku čekající na vyřízení",
   "TR_STAKE_TREZOR_NO_LIABILITY": "Při stakingu přechází odpovědnost za zabezpečení vašich prostředků z Trezoru na Everstake.",
   "TR_STAKE_UNSTAKE": "Zrušit staking",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Staking zrušen a připraveno na výběr",
