--- a/packages/suite-data/files/translations/en.json
+++ b/packages/suite-data/files/translations/en.json
@@ -1773,7 +1773,7 @@
   "TR_STAKE_STAKING_PROCESS": "Staking process",
   "TR_STAKE_START_STAKING": "Start staking",
   "TR_STAKE_TIME_TO_CLAIM": "Time to claim",
-  "TR_STAKE_TOTAL_PENDING": "Total stake pending:",
+  "TR_STAKE_TOTAL_PENDING": "Total stake pending",
   "TR_STAKE_TREZOR_NO_LIABILITY": "When staking, the responsibility for your funds' security transitions from your Trezor to Everstake.",
   "TR_STAKE_UNSTAKE": "Unstake",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Unstaked and ready to claim",
