--- a/packages/suite-data/files/translations/es.json
+++ b/packages/suite-data/files/translations/es.json
@@ -1773,7 +1773,7 @@
   "TR_STAKE_STAKING_PROCESS": "Proceso de staking",
   "TR_STAKE_START_STAKING": "Empieza a hacer staking",
   "TR_STAKE_TIME_TO_CLAIM": "Es el momento de reclamar",
-  "TR_STAKE_TOTAL_PENDING": "Cantidad de stake pendiente:",
+  "TR_STAKE_TOTAL_PENDING": "Cantidad de stake pendiente",
   "TR_STAKE_TREZOR_NO_LIABILITY": "Al hacer staking, la responsabilidad de la seguridad de tus fondos pasa de tu Trezor a Everstake.",
   "TR_STAKE_UNSTAKE": "Quitar el stake",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Sin stake y listo para reclamar",
