--- a/packages/suite-data/files/translations/pt.json
+++ b/packages/suite-data/files/translations/pt.json
@@ -1773,7 +1773,7 @@
   "TR_STAKE_STAKING_PROCESS": "Processo para inclusão no stake",
   "TR_STAKE_START_STAKING": "Comece a fazer stake",
   "TR_STAKE_TIME_TO_CLAIM": "É hora de resgatar",
-  "TR_STAKE_TOTAL_PENDING": "Total em stake pendente:",
+  "TR_STAKE_TOTAL_PENDING": "Total em stake pendente",
   "TR_STAKE_TREZOR_NO_LIABILITY": "Ao apostar, a responsabilidade pela segurança de seus fundos passa da sua Trezor para a Everstake.",
   "TR_STAKE_UNSTAKE": "Remover do stake",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Removido do stake e pronto para resgate",
