--- a/packages/suite-data/files/translations/uk.json
+++ b/packages/suite-data/files/translations/uk.json
@@ -1554,7 +1554,7 @@
   "TR_STAKE_STAKING_IS": "Стейкінг передбачає тимчасове блокування ваших активів Ethereum для підтримки роботи блокчейну. В обмін на це ви отримаєте додаткову кількість Ethereum в якості винагороди.",
   "TR_STAKE_START_STAKING": "Розпочати Стейкінг",
   "TR_STAKE_TIME_TO_CLAIM": "Час ",
-  "TR_STAKE_TOTAL_PENDING": "Загальний поточний стейкінг :",
+  "TR_STAKE_TOTAL_PENDING": "Загальний поточний стейкінг",
   "TR_STAKE_TREZOR_NO_LIABILITY": "<t>Під час стейкінгу відповідальність за безпеку ваших коштів переходить від вашого Trezor до Everstake.",
   "TR_STAKE_UNSTAKE": "Зняти зі стейкінгу",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Зняти зі стейкінгу та будьте готові до клейму",
