--- a/packages/suite-data/files/translations/vi.json
+++ b/packages/suite-data/files/translations/vi.json
@@ -1690,7 +1690,7 @@
   "TR_STAKE_STAKING_IS": "Staking involves temporarily locking your Ethereum assets to support the blockchain's operation. In return, you'll earn additional Ethereum as a reward.",
   "TR_STAKE_START_STAKING": "Start staking",
   "TR_STAKE_TIME_TO_CLAIM": "Time to claim",
-  "TR_STAKE_TOTAL_PENDING": "Total stake pending:",
+  "TR_STAKE_TOTAL_PENDING": "Total stake pending",
   "TR_STAKE_TREZOR_NO_LIABILITY": "<t>When staking, the responsibility for</t> your funds' security transitions from your Trezor to Everstake.",
   "TR_STAKE_UNSTAKE": "Unstake",
   "TR_STAKE_UNSTAKED_AND_READY_TO_CLAIM": "Unstaked and ready to claim",
